r-cran-magick fails in libmagick++ dependencies: try explicit installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,11 @@ branches:
 sudo: false
 
 addons:
-  apt: 
-    packages: libmagick++-dev
+  apt:
+    packages:
+      - libmagick++-dev
+      - libmagick++
+      - libmagickcore
 
 r_binary_packages:
   - coda
