magickcore, not libmagickcore

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
     packages:
       - libmagick++-dev
       - libmagick++
-      - libmagickcore
+      - magickcore
 
 r_binary_packages:
   - coda
