more blind watchmaker edits

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ addons:
   apt:
     packages:
       - libmagick++-dev
-      - libmagick++
-      - magickcore
+      - libmagickcore-dev
 
 r_binary_packages:
   - coda
