update NAMESPACE for Matrix::chol && Matrix::chol2inv

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,8 @@ importFrom(Matrix,.sparseDiagonal)
 importFrom(Matrix,Diagonal)
 importFrom(Matrix,Matrix)
 importFrom(Matrix,bdiag)
+importFrom(Matrix,chol)
+importFrom(Matrix,chol2inv)
 importFrom(Matrix,solve)
 importFrom(Matrix,sparseMatrix)
 importFrom(Matrix,t)
