--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,9 +43,11 @@ importFrom(Matrix,Matrix)
 importFrom(Matrix,bdiag)
 importFrom(Matrix,chol)
 importFrom(Matrix,chol2inv)
+importFrom(Matrix,crossprod)
 importFrom(Matrix,solve)
 importFrom(Matrix,sparseMatrix)
 importFrom(Matrix,t)
+importFrom(Matrix,tcrossprod)
 importFrom(abind,abind)
 importFrom(ape,keep.tip)
 importFrom(ape,read.tree)
